--- a/style.css
+++ b/style.css
@@ -9,3 +9,12 @@ header {
     text-align: center;
     padding: 10px;
 }
+
+.mwili {
+    color: white;
+}
+
+.list {
+    width: 50%;
+    float: left;
+}
