add final css stylings

--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@ body {
     background-image: url(./1wallpaperflare.com_wallpaper1.jpg);
     background-position: center;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 header {
